# lab-paper-git-workflow

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  LICENSE  PUBLIC_READINESS_AUDIT.md  PUBLIC_RELEASE_CHECKLIST.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  V0_4_RELEASE_REPORT.md  V0_5_1_CLEAN_CLONE_REPORT.md  V0_5_RELEASE_REPORT.md  V0_6_RELEASE_REPORT.md  V0_7_3_TEXT_BLOB_FIX_REPORT.md  V0_7_RELEASE_REPORT.md  V0_9_1_TEST_RUNNER_REPORT.md  V0_9_2_CLEAN_INSTALL_AUDIT_REPORT.md  V0_9_4_PUBLIC_USABILITY_AUDIT.md  V0_9_5_PUBLIC_POLISH_AUDIT.md  V0_9_7_DOCS_FREEZE_AUDIT.md  V0_9_8_PUBLIC_TRUST_AUDIT_REPORT.md  V0_9_CLEAN_INSTALL_NOTES.md  V0_9_RELEASE_REPORT.md  V0_9_STABILITY_AUDIT.md  pyproject.toml
.github/: pull_request_template.md
contracts/: cli_commands.yaml  diagnostic_codes.yaml  exit_codes.yaml  public_safety_allowlist.yaml  schema_names.yaml
docs/: artifact_locks.md  artifact_manifest.md  clean_install_audit.md  cli_reference.md  codex_workflows.md  common_paths.md  compatibility.md  concepts.md  contract.md  deprecation_policy.md  design_principles.md  error_codes.md  example_integrity.md  existing_latex_project.md  exit_codes.md  faq.md  folder_structure.md  getting_started.md  github_overleaf_sync.md  github_repo_settings.md  glossary.md  install.md  lab_slack_launch.md  manuscript_ci.md  one_page_reference.md  overleaf_from_github.md  privacy_and_data_safety.md  provenance_ledger.md  public_launch.md  python_outputs_to_overleaf.md  release_process.md  release_reports.md  reviewer_response_binder.md  schema_reference.md  slack_launch.md  start_here.md  submission_packaging.md  terminology_cleanup.md  troubleshooting.md  v1_0_readiness.md  (+4 more)
examples/: README.md  example_artifact_manifest.yaml  example_project_config.yaml  (+3 more)
(+176 files in other folders)
