[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-paper-git-workflow"
version = "0.1.0"
description = "Internal lab workflow and CLI for clean manuscript GitHub/Overleaf repositories"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Lab maintainers" }
]
keywords = ["latex", "overleaf", "github", "manuscript", "research-workflow"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
test = ["pytest>=7"]

[project.scripts]
paper-scaffold = "paper_scaffold.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
