[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-scaffold"
version = "0.7.0"
description = "Workflow and CLI for clean manuscript GitHub/Overleaf repositories"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Paper Scaffold contributors" }
]
keywords = ["latex", "overleaf", "github", "manuscript", "research-workflow", "word", "pandoc"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = ["pytest>=7", "ruff>=0.5", "pre-commit>=3"]
test = ["pytest>=7"]

[project.scripts]
paper-scaffold = "paper_scaffold.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 160

[tool.ruff.lint]
select = ["F"]
